<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.2</version>
	</parent>

	<groupId>no.nav.dokdistavstemming</groupId>
	<artifactId>dokdistavstemming</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>sdist002</module>
		<module>sdist004</module>
		<module>sdist006</module>
	</modules>

	<properties>
		<java.version>21</java.version>

		<logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
		<ibm.mq.client.version>9.4.1.1</ibm.mq.client.version>
		<camel.version>4.9.0</camel.version>
		<guava.version>33.2.1-jre</guava.version>
		<jiraapi.version>1.1.0</jiraapi.version>
		<kafka-avro-serializer.version>7.8.0</kafka-avro-serializer.version>
		<teamdokumenthandtering-avro-schemas.version>1.1.6</teamdokumenthandtering-avro-schemas.version>
		<spring-cloud-wiremock.version>4.1.4</spring-cloud-wiremock.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdistavstemming</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistavstemming</groupId>
				<artifactId>sdist002</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistavstemming</groupId>
				<artifactId>sdist004</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistavstemming</groupId>
				<artifactId>sdist006</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dok-common</groupId>
				<artifactId>jiraapi</artifactId>
				<version>${jiraapi.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.jakarta.client</artifactId>
				<version>${ibm.mq.client.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.confluent</groupId>
				<artifactId>kafka-avro-serializer</artifactId>
				<version>${kafka-avro-serializer.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.teamdokumenthandtering</groupId>
				<artifactId>teamdokumenthandtering-avro-schemas</artifactId>
				<version>${teamdokumenthandtering-avro-schemas.version}</version>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>no.nav.dokdistavstemming</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>